# eline-uio-bot

./: .env.example  .gitignore  Cargo.toml
src/: config.rs  course_scraper.rs  db.rs  diff.rs  main.rs  models.rs  web.rs
src/notifier/: console.rs  email.rs  mod.rs  sms.rs
