[package]
name = "uiobot"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client (with JSON for Resend API)
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }

# HTML parsing
scraper = "0.22"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI arguments
clap = { version = "4", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Async trait
async-trait = "0.1"

# Environment variables
dotenvy = "0.15"
